# API/Autoceste/Autoceste.WebAPI2/Controllers/AutocesteController.cs
@@ -18,7 +18,7 @@ namespace Autoceste.WebAPI2.Controllers
         }
 
         [HttpGet, Route("autoceste/{id}")]
-        public IActionResult GetAutocestaById(int id, [FromQuery]bool includeNaplatnePostaje = false)
+        public IActionResult GetAutocestaById(int id)
         {
             try
             {
@@ -36,13 +36,6 @@ namespace Autoceste.WebAPI2.Controllers
                 response.Status = "OK";
                 response.Message = $"Dohvaćena je autocesta s identifikatorom {id}.";
 
-                if (includeNaplatnePostaje)
-                {
-                    var npService = new NaplatnePostajeService(orContext);
-                    autocesta.NaplatnePostaje = npService.GetNaplatnePostajeByAutocestaId(autocesta.Id);
-                    response.Message = response.Message + $" Pronađeno {autocesta.NaplatnePostaje.Count} naplatnih postaja na toj autocesti.";
-                }
-
                 response.Response = autocesta;
                 return Ok(response);
             }
@@ -54,67 +47,58 @@ namespace Autoceste.WebAPI2.Controllers
         }
 
         [HttpGet, Route("autoceste")]
-        public IActionResult GetAutoceste([FromQuery] bool includeNaplatnePostaje = false)
+        public IActionResult GetAutoceste([FromQuery] string searchProperty, string searchTerm)
         {
             try
             {
-                var autoceste = autocesteService.GetAutoceste(includeNaplatnePostaje);
-
-                var response = new ResponseWrapper();
-
-                if (autoceste == null || autoceste.Count == 0)
+                if (searchProperty == null || searchTerm == null) //bez searcha, dohvati sve
                 {
-                    response.Status = "Not found";
-                    response.Message = $"Nije pronađena niti jedna autocesta.";
-                    return NotFound(response);
-                }
+                    var autoceste = autocesteService.GetAutoceste();
 
-                response.Status = "OK";
-                response.Message = $"Lista autocesta je dohvaćena.";
-                if (includeNaplatnePostaje) response.Message += " Svakoj autocesti su pridružene pripadajuće naplatne postaje.";
-                response.Response = autoceste;
+                    var response = new ResponseWrapper();
 
-                return Ok(response);
-            }
-            catch (Exception e)
-            {
-                Console.WriteLine(e.Message);
-                return StatusCode(500, ErrorResponses.GeneralException);
-            }
-        }
-
-        [HttpGet, Route("search/autoceste")]
-        public IActionResult SearchAutoceste(string searchProperty, string searchTerm)
-        {
-            try
-            {
-                List<Autocesta> autoceste = null;
-                try
-                {
-                    autoceste = autocesteService.GetAutocesteFiltered(searchProperty, searchTerm);
-                }
-                catch (ArgumentException)
-                {
-                    return BadRequest(new ResponseWrapper
+                    if (autoceste == null || autoceste.Count == 0)
                     {
-                        Status = "Bad request",
-                        Message = "SearchProperty nije valjan. Valjane vrijednosti su: NeformalniNaziv, Dionica, Oznaka, Duljina."
-                    });
-                }
+                        response.Status = "Not found";
+                        response.Message = $"Nije pronađena niti jedna autocesta.";
+                        return NotFound(response);
+                    }
 
-                var response = new ResponseWrapper();
+                    response.Status = "OK";
+                    response.Message = $"Lista autocesta je dohvaćena.";
+                    response.Response = autoceste;
 
-                if (autoceste == null || autoceste.Count == 0)
+                    return Ok(response); 
+                } else //search
                 {
-                    response.Status = "Not found";
-                    response.Message = $"Provedeno pretraživanje po uvjetu {searchProperty}={searchTerm}. Niti jedna autocesta nije pronađena.";
-                    return NotFound(response);
-                }
+                    List<Autocesta> autoceste = null;
+                    try
+                    {
+                        autoceste = autocesteService.GetAutocesteFiltered(searchProperty, searchTerm);
+                    }
+                    catch (ArgumentException)
+                    {
+                        return BadRequest(new ResponseWrapper
+                        {
+                            Status = "Bad request",
+                            Message = "SearchProperty nije valjan. Valjane vrijednosti su: NeformalniNaziv, Dionica, Oznaka, Duljina."
+                        });
+                    }
 
-                response.Status = "OK";
-                response.Message = $"Provedeno pretraživanje po uvjetu {searchProperty}={searchTerm}. Dohvaćene su autoceste koje zadovoljavaju uvjet.";
-                response.Response = autoceste;
-                return Ok(response);
+                    var response = new ResponseWrapper();
+
+                    if (autoceste == null || autoceste.Count == 0)
+                    {
+                        response.Status = "Not found";
+                        response.Message = $"Provedeno pretraživanje po uvjetu {searchProperty}={searchTerm}. Niti jedna autocesta nije pronađena.";
+                        return NotFound(response);
+                    }
+
+                    response.Status = "OK";
+                    response.Message = $"Provedeno pretraživanje po uvjetu {searchProperty}={searchTerm}. Dohvaćene su autoceste koje zadovoljavaju uvjet.";
+                    response.Response = autoceste;
+                    return Ok(response);
+                }
             }
             catch (Exception e)
             {
@@ -122,5 +106,6 @@ namespace Autoceste.WebAPI2.Controllers
                 return StatusCode(500, ErrorResponses.GeneralException);
             }
         }
+
     }
 }
