# openapi.json
@@ -26,14 +26,6 @@
               "type": "integer",
               "format": "int32"
             }
-          },
-          {
-            "name": "includeNaplatnePostaje",
-            "in": "query",
-            "schema": {
-              "type": "boolean",
-              "default": false
-            }
           }
         ],
         "responses": {
@@ -44,28 +36,6 @@
       }
     },
     "/api/v1/autoceste": {
-      "get": {
-        "tags": [
-          "Autoceste"
-        ],
-        "parameters": [
-          {
-            "name": "includeNaplatnePostaje",
-            "in": "query",
-            "schema": {
-              "type": "boolean",
-              "default": false
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          }
-        }
-      }
-    },
-    "/api/v1/search/autoceste": {
       "get": {
         "tags": [
           "Autoceste"
@@ -114,103 +84,7 @@
             "description": "Success"
           }
         }
-      }
-    },
-    "/api/v1/naplatne-postaje": {
-      "get": {
-        "tags": [
-          "NaplatnePostaje"
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          }
-        }
-      }
-    },
-    "/api/v1/autoceste/{autocestaId}/naplatne-postaje": {
-      "get": {
-        "tags": [
-          "NaplatnePostaje"
-        ],
-        "parameters": [
-          {
-            "name": "autocestaId",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          }
-        }
-      }
-    },
-    "/api/v1/search/naplatne-postaje": {
-      "get": {
-        "tags": [
-          "NaplatnePostaje"
-        ],
-        "parameters": [
-          {
-            "name": "searchProperty",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "searchTerm",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          }
-        }
-      }
-    },
-    "/autoceste": {
-      "post": {
-        "tags": [
-          "NaplatnePostaje"
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/NaplatnaPostaja"
-              }
-            },
-            "text/json": {
-              "schema": {
-                "$ref": "#/components/schemas/NaplatnaPostaja"
-              }
-            },
-            "application/*+json": {
-              "schema": {
-                "$ref": "#/components/schemas/NaplatnaPostaja"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Success"
-          }
-        }
-      }
-    },
-    "/autoceste/{id}": {
+      },
       "delete": {
         "tags": [
           "NaplatnePostaje"
@@ -266,6 +140,86 @@
             }
           }
         },
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/api/v1/naplatne-postaje": {
+      "get": {
+        "tags": [
+          "NaplatnePostaje"
+        ],
+        "parameters": [
+          {
+            "name": "searchProperty",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "searchTerm",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "NaplatnePostaje"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/NaplatnaPostaja"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/NaplatnaPostaja"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/NaplatnaPostaja"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/api/v1/autoceste/{autocestaId}/naplatne-postaje": {
+      "get": {
+        "tags": [
+          "NaplatnePostaje"
+        ],
+        "parameters": [
+          {
+            "name": "autocestaId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Success"
